# IMG2MIDI4VIDEOGAMES

./: pyproject.toml
src/model/: Train_vae.py  __init__.py  evaluate.py  train_cnn.py  train_lstm.py  utils.py
src/model/data_proccesing/: convert_mirex.ipynb  preproccesing.py  preproccesing_chordonomicon.py  preproccesing_chordonomicon_resumable.py  preproccesing_popular_hook.py  preproccesing_popular_hook_resumable.py  test_capture_progresion.ipynb
src/model/data_proccesing/Otros/: preproccesing_popular_hook.py
src/model/models/: Music_VAE.py  cnn_vae_model.py  lstm_vae_model.py  test_models.ipynb
src/model/models/Music_VAE_models/run_ldim256_kl0.5_batch128/: config.json  training_history.csv
src/model/models/Music_VAE_models/run_ldim256_kl0.5_batch128/logs/: events.out.tfevents.1760239199.Nehemias.47153.0.v2  events.out.tfevents.1760242338.Nehemias.57544.0.v2  events.out.tfevents.1760242787.Nehemias.59713.0.v2  events.out.tfevents.1760243272.Nehemias.61913.0.v2  events.out.tfevents.1760244683.Nehemias.67211.0.v2  events.out.tfevents.1760244713.Nehemias.67481.0.v2  events.out.tfevents.1760244799.Nehemias.68215.0.v2  events.out.tfevents.1760244906.Nehemias.69221.0.v2  events.out.tfevents.1760245000.Nehemias.69682.0.v2  model_summary.txt
src/model/models/Music_VAE_models/run_ldim96_kl0.6_batch512/: config.json
src/model/models/Music_VAE_models/run_ldim96_kl0.6_batch512/logs/: events.out.tfevents.1760667873.Nehemias.13057.0.v2  model_summary.txt  (+1 more)
src/model/utils/: __init__.py  metrics.py  tensorboard_utils.py  visualization_utils.py
(+15 files in other folders)
