[project]
name = "model"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow (==2.16.1)",
    "pandas (>=2.3.1,<3.0.0)",
    "music21 (>=9.7.1,<10.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)"
]

[tool.poetry]
packages = [
    { include = "model", from = "src" },
]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
